Saving State testing goqu and sqlx
