# api/swagger.json
@@ -7,6 +7,25 @@
     },
     "basePath": "/",
     "paths": {
+        "/api/v1/distros/list": {
+            "get": {
+                "description": "List all users",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/users/": {
             "post": {
                 "description": "Create a New User",
@@ -20,7 +39,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LinuxUser"
+                            "$ref": "#/definitions/dbmodels.LinuxUser"
                         }
                     }
                 ],
@@ -28,7 +47,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.LinuxUser"
+                            "$ref": "#/definitions/dbmodels.LinuxUser"
                         }
                     }
                 }
@@ -44,7 +63,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.LinuxUser"
+                            "$ref": "#/definitions/dbmodels.LinuxUser"
                         }
                     }
                 }
@@ -69,7 +88,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.LinuxUser"
+                            "$ref": "#/definitions/dbmodels.LinuxUser"
                         }
                     }
                 }
@@ -93,7 +112,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LinuxUser"
+                            "$ref": "#/definitions/dbmodels.LinuxUser"
                         }
                     }
                 ],
@@ -101,7 +120,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.LinuxUser"
+                            "$ref": "#/definitions/dbmodels.LinuxUser"
                         }
                     }
                 }
@@ -124,7 +143,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.LinuxUser"
+                            "$ref": "#/definitions/dbmodels.LinuxUser"
                         }
                     }
                 }
@@ -132,16 +151,16 @@
         }
     },
     "definitions": {
-        "models.LinuxUser": {
+        "dbmodels.LinuxUser": {
             "type": "object",
             "properties": {
-                "distro": {
+                "linuxDistro": {
                     "type": "string"
                 },
-                "id": {
+                "linuxUserID": {
                     "type": "integer"
                 },
-                "name": {
+                "linuxUserName": {
                     "type": "string"
                 }
             }
